added a lot of parallax stuff. This is a temparary addition.

--- a/live/index.html
+++ b/live/index.html
@@ -6,11 +6,87 @@
 <!--[if IE]>
 <script src="http://html5shiv.googlecode.com/svn/trunk/html5.js"></script>
 <![endif]-->
-<link rel="stylesheet" href="/assets/stylesheets/style.css">
+<meta name="viewport" content="width=980">
+<link rel="stylesheet" href="css/style.css">
 </head>
 <body>
 
-	<p>Hello World!</p>
+	<div class="masthead">
+	<div class="grid-row">
+		<div class="full-width">
+			
+			<nav>
+				<ul>
+					<li><a href="#">Link</a></li>
+					<li><a href="#">Link</a></li>
+					<li><a href="#">Link</a></li>
+					<li><a href="#">Link</a></li>
+				</ul>
+			</nav>
+
+		</div>
+	</div>
+</div>
+	
+	
+
+	<!--
+<div class="slide" id="slide1" data-slide="1" data-stellar-background-ratio="0.5">                        
+    <a class="button" data-slide="2" title=""></a>      
+</div> 
+-->
+<div class="wrapper">
+<div class="scroll-wrap content-intro" data-type="background" data-speed="10">
+	<div class="grid-row" data-slide="2">
+		<div class="full-width">
+	
+			<h2>This is a short h2 title</h2>
+
+			<p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Aenean a nisi metus. Morbi accumsan laoreet elit id ultrices. Fusce sit amet dignissim dolor. Maecenas convallis congue purus sed mattis. Sed velit orci, blandit varius fringilla nec, suscipit pretium sapien. Integer blandit blandit porta. Fusce ut gravida orci. Nulla eleifend mi id erat accumsan aliquam. In hac habitasse platea dictumst. Nulla congue sapien in nibh mollis nec laoreet ante bibendum.</p>
+
+		</div>
+	</div>
+</div>
+
+
+<div class="scroll-wrap content-a" data-type="background" data-speed="5">
+	<div class="grid-row">
+		<div class="full-width">
+	
+			<h2>This is a short h2 title</h2>
+
+			<p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Aenean a nisi metus. Morbi accumsan laoreet elit id ultrices. Fusce sit amet dignissim dolor. Maecenas convallis congue purus sed mattis. Sed velit orci, blandit varius fringilla nec, suscipit pretium sapien. Integer blandit blandit porta. Fusce ut gravida orci. Nulla eleifend mi id erat accumsan aliquam. In hac habitasse platea dictumst. Nulla congue sapien in nibh mollis nec laoreet ante bibendum.</p>
+
+		</div>
+	</div>
+</div>
+
+
+<div class="scroll-wrap content-b" data-type="background" data-speed="10">
+	<div class="grid-row">
+		<div class="full-width">
+	
+			<h2>This is a longer-ish title</h2>
+
+			<p class="text-small">Lorem ipsum dolor sit amet, consectetur adipiscing elit. Aenean a nisi metus. Morbi accumsan laoreet elit id ultrices. Fusce sit amet dignissim dolor. Maecenas convallis congue purus sed mattis. Sed velit orci, blandit varius fringilla nec, suscipit pretium sapien. Integer blandit blandit porta. Fusce ut gravida orci. Nulla eleifend mi id erat accumsan aliquam. In hac habitasse platea dictumst. Nulla congue sapien in nibh mollis nec laoreet ante bibendum.</p>
+
+		</div>
+	</div>
+</div>
+
+
+<div class="scroll-wrap content-c" data-type="background" data-speed="5">
+	<div class="grid-row">
+		<div class="full-width">
+	
+			<h2>Aenean a nisi metus</h2>
+
+			<p class="text-large">Morbi accumsan laoreet elit id ultrices. Fusce sit amet dignissim dolor. Maecenas convallis congue purus sed mattis. Sed velit orci, blandit varius fringilla nec, suscipit pretium sapien. Integer blandit blandit porta.</p>
+
+		</div>
+	</div>
+</div>
+</div>
 
 	<!-- js, jQuery, init.js goes here -->
 	<script type="text/javascript" src="//ajax.googleapis.com/ajax/libs/jquery/1.11.0/jquery.min.js"></script>
@@ -19,7 +95,13 @@
 	    document.write(unescape("%3Cscript src='_/javascripts/vendor/jquery.min.js' type='text/javascript'%3E%3C/script%3E"));
 	}
 	</script>
-	<script type="text/javascript" src="/assets/javascripts/all.min.js"></script>
+
+	<!-- js, jQuery, init.js goes here -->
+	<!-- <script type="text/javascript" src="/dev/js/vendor/skrollr.min.js"></script> -->
+	<script type="text/javascript" src="/dev/js/vendor/waypoints.min.js"></script>
+	<script type="text/javascript" src="/dev/js/vendor/jquery.scroll_to.js"></script>
+	<script type="text/javascript" src="/dev/js/vendor/jquery.snapscroll.min.js"></script>
+	<script type="text/javascript" src="js/all.min.js"></script>
 
 </body>
 </html>
